<resources>
    <string name="gf_app_name">Google Feedback</string>
    <string name="gf_back">Back</string>
    <string name="gf_feedback">Feedback</string>
    <string name="gf_user_account">User Account</string>
    <string name="gf_anonymous">Anonymous</string>
    <string name="gf_choose_an_account">Choose an account</string>
    <string name="gf_report_feedback">Report An Issue</string>
    <string name="gf_screenshot_preview">Screenshot Preview</string>
    <string name="gf_preview">Preview</string>
    <string name="gf_send">Send</string>
    <string name="gf_preview_feedback">Preview feedback</string>
    <string name="gf_no_data">No data</string>
    <string name="gf_privacy">Privacy</string>
    <string name="gf_include_system_data">Include system data</string>
    <string name="gf_include_screenshot">Include screenshot</string>
    <string name="gf_this_will_help">Share system data with Google, to better diagnose the problem.</string>
    <string name="gf_this_will_help_screenshot">Send screenshot of the last page you were on.</string>
    <string name="gf_unknown_app">Unknown application</string>
    <string name="gf_report_being_sent">Thanks, your report is being sent.</string>
    <string name="gf_report_sent_failure">Sorry, there was an error sending your report.</string>
    <string name="gf_report_queued">Your device seems to be offline. We will retry when you are connected.</string>
    <string name="gf_optional_description">Description (optional)</string>
    <string name="gf_system_log">System Log</string>
    <string name="gf_sys_logs">System Logs</string>
    <string name="gf_privacy_policy">Privacy Policy</string>
    <string name="gf_privacy_text">By selecting [Send] you acknowledge and agree that any information contained in the feedback report will be used by Google in accordance with the Google privacy policies applicable to the application through which you initiated the report. You agree that Google may use any feedback that you provide to improve any Google products or services.</string>
    <string name="gf_build_view">Build Data</string>
    <string name="gf_network_data">Network</string>
    <string name="gf_network_name">Network Name</string>
    <string name="gf_error_report_system">System</string>
    <string name="gf_error_report_package_version">Package version</string>
    <string name="gf_error_report_package_version_name">Package version name</string>
    <string name="gf_error_report_package_name">Package name</string>
    <string name="gf_error_report_installer_package_name">Installed by</string>
    <string name="gf_error_report_process_name">Process name</string>
    <string name="gf_error_report_time">Time</string>
    <string name="gf_error_report_description">Description</string>
    <string name="gf_error_report_device">Device</string>
    <string name="gf_error_report_build_id">Build id</string>
    <string name="gf_error_report_build_type">Build type</string>
    <string name="gf_error_report_model">Model</string>
    <string name="gf_error_report_product">Product</string>
    <string name="gf_error_report_sdk_version">SDK version</string>
    <string name="gf_error_report_release">Release</string>
    <string name="gf_error_report_incremental">Incremental version</string>
    <string name="gf_error_report_codename">Codename</string>
    <string name="gf_error_report_board">Board</string>
    <string name="gf_error_report_brand">Brand</string>
    <string name="gf_error_report_user_accounts">Number of Google accounts</string>
    <string name="gf_error_report_installed_packages">Installed applications</string>
    <string name="gf_error_report_running_apps">Running applications</string>
    <string name="gf_error_report_system_log">System log</string>
    <string name="gf_error_report_system_app">System app</string>
    <string name="gf_error_report_running_service_details">Details</string>
    <string name="gf_should_submit_on_empty_description">You have not entered an issue description. Are you sure you want to send feedback without a description?</string>
    <string name="gf_should_submit_anonymously">You are submitting feedback anonymously. Your email address may help us debug your reported issue better. Are you sure you want to continue?</string>
    <string name="gf_yes">Yes</string>
    <string name="gf_no">No</string>
    <string name="gf_crash_header">Crash Data</string>
    <string name="gf_stack_trace">Stack Trace</string>
    <string name="gf_exception_class_name">Exception Class Name</string>
    <string name="gf_throw_file_name">Throw File Name</string>
    <string name="gf_throw_line_number">Throw Line Number</string>
    <string name="gf_throw_class_name">Throw Class Name</string>
    <string name="gf_throw_method_name">Throw Method Name</string>
    <string name="gf_exception_message">Exception Message</string>
    <string name="gf_receiver_transport_scheme">https</string>
    <string name="gf_receiver_host">www.google.com</string>
    <string name="gf_receiver_port" />
    <string name="gf_receiver_path">/tools/feedback/android/__submit</string>
    <string name="capturing_bugreport">Capturing bugreport…</string>
    <string name="bugreport_captured">Bugreport captured</string>
    <string name="app_name">Glass Voice</string>
    <string name="guard_phrase_menu_item">ok glass,</string>
    <string name="voice_input_swipe_down_to_cancel">Swipe down to cancel</string>
    <string name="voice_input_no_match">"Didn't catch that"</string>
    <string name="voice_input_network_error">"Can't reach Google right now"</string>
    <string name="voice_input_server_error">"Can't reach Google right now"</string>
    <string name="voice_input_audio_error">"Didn't catch that"</string>
    <string name="voice_network_connectivity">No network connectivity</string>
    <string name="voice_search_no_answer">No answer for this search</string>
    <string name="error_tap_speak_again">Tap to speak again</string>
    <string name="error_no_speech_detected">No speech detected</string>
    <string name="provider_label_audio">Glass Audio</string>
    <string name="time_format_pattern_12h">hmm</string>
    <string name="time_format_pattern_12h_am_pm">hmm aaa</string>
    <string name="time_format_pattern_24h">kmm</string>
    <string name="yesterday">Yesterday</string>
    <string name="date_format_pattern">EEEE M/d</string>
    <string name="timestamp_now_future">now</string>
    <string name="timestamp_now_past">just now</string>
    <string name="timestamp_tomorrow">tomorrow</string>
    <string name="timestamp_yesterday">yesterday</string>
    <string name="timestamp_recent">recent</string>
    <string name="timestamp_past_hour">past hour</string>
    <string name="timestamp_future_prefix">"in "</string>
    <string name="timestamp_past_suffix">" ago"</string>
    <string name="timestamp_min">" min"</string>
    <string name="timestamp_mins">" mins"</string>
    <string name="timestamp_hour">" hour"</string>
    <string name="timestamp_hours">" hours"</string>
    <string name="timestamp_day">" day"</string>
    <string name="timestamp_days">" days"</string>
    <string name="timestamp_week">" week"</string>
    <string name="timestamp_weeks">" weeks"</string>
    <string name="timestamp_month">" month"</string>
    <string name="timestamp_months">" months"</string>
    <string name="timestamp_year">" year"</string>
    <string name="timestamp_years">" years"</string>
    <string name="bugreport_title_manual">Manual Bugreport Captured</string>
    <string name="phone_call_mute">Mute</string>
    <string name="phone_call_unmute">Unmute</string>
    <string name="phone_call_unknown_caller">Unknown</string>
    <string name="phone_call_incoming">Incoming…</string>
    <string name="phone_call_calling">Calling…</string>
    <string name="phone_call_hanging_up">Hanging up…</string>
    <string name="phone_call_missed_call">Missed call</string>
    <string name="phone_call_failed">Call failed</string>
    <string name="phone_call_reply_menu_display_name">Message</string>
    <string name="phone_call_total_time">%s call</string>
    <string name="phone_call_duration_hours_minutes_seconds" formatted="false">%s hr %s min %s sec</string>
    <string name="phone_call_duration_minutes_seconds" formatted="false">%s min %s sec</string>
    <string name="phone_call_duration_seconds">%s sec</string>
    <string name="phone_call_in_call">In a phone call</string>
    <string name="phone_call_menu_end">End call</string>
    <string name="phone_call_answer">Answer</string>
    <string name="phone_call_reject">Reject</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sharing_no_share_targets">Visit google.com/myglass to add friends</string>
    <string name="sharing_menu_share_confirming">Sharing</string>
    <string name="sharing_menu_share_confirmed">Shared</string>
    <string name="sharing_menu_tap_to_annotate">Tap to add caption</string>
    <string name="qr_scan_tips">Point towards the QR code on your screen</string>
    <string name="low_storage_dialog_message">Low storage</string>
    <string name="full_storage_dialog_message">Storage is full</string>
    <string name="storage_dialog_sub_message">Connect through USB to remove content</string>
    <string name="error_bluetooth_headset_not_active">Bluetooth headset not active</string>
    <string name="error_no_phone_number">No phone number available</string>
    <string name="error_phone_in_use">You are already in a phone call</string>
    <string name="error_tap_connection_settings">Tap to view connection settings</string>
    <string name="error_edit_contacts">Visit google.com/myglass to edit contacts</string>
    <string name="error_no_email">No email address available</string>
    <string name="error_no_phone_or_email">No phone number or email address</string>
    <string name="timeline_menu_share">Share</string>
    <string name="timeline_menu_delete">Delete</string>
    <string name="timeline_menu_delete_confirming">Deleting</string>
    <string name="timeline_menu_delete_confirmed">Deleted</string>
    <string name="timeline_menu_reply">Reply</string>
    <string name="timeline_menu_reply_all">Reply all</string>
    <string name="timeline_menu_retry">Retry</string>
    <string name="timeline_menu_read_aloud">Read aloud</string>
    <string name="timeline_menu_voice_call">Call</string>
    <string name="timeline_menu_navigate">Get directions</string>
    <string name="timeline_menu_expand_search">Show results</string>
    <string name="timeline_menu_hangout">Video call</string>
    <string name="timeline_menu_pin">Pin</string>
    <string name="timeline_menu_play_video">Play</string>
    <string name="timeline_menu_unpin">Unpin</string>
    <string name="timeline_menu_read_more">Read more</string>
    <string name="timeline_menu_new_search">New search</string>
    <string name="timeline_menu_view_website">View website</string>
    <string name="timeline_menu_error_in_a_call_no_hangout">End phone call to start a video call</string>
    <string name="timeline_menu_error_in_a_hangout_no_call">End video call to place a phone call</string>
    <string name="timeline_menu_error_in_a_hangout_no_hangout">Already in a video call</string>
    <string name="timeline_menu_error_in_a_call_no_call">Already in a call</string>
    <string name="timeline_sms_signature_format" formatted="false">%s%s</string>
    <string name="timeline_sms_signature">" | Sent through Glass"</string>
    <string name="settings">Settings</string>
    <string name="settings_cover_connection_no_data">No network</string>
    <string name="settings_cover_battery_state_unknown">Battery charge unknown</string>
    <string name="battery">Battery</string>
    <string name="battery_charge_unknown">Charge unknown</string>
    <string name="battery_connect_charger">Connect charger</string>
    <string name="battery_duration_unknown">Duration unknown</string>
</resources>